@@ -911,6 +911,13 @@ stopifnot(
 )
 
 
+## write.csv did not signal an error if the disk was full PR#17243
+if (file.access("/dev/full", mode = 2) == 0)  # Only on Linux...
+    stopifnot(inherits(tryCatch(write.table(data.frame(x=1), file = "/dev/full"), error = identity),
+                            "error"))
+## Silently failed up to 3.4.1
+    
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
